refactoring: Trackingservice -  TrackingServiceCustomInterface from beans and obsolete from class